[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_oracle_scm"
version = "0.1.4"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "Oracle SCM MCP Server"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "mcp[cli]>=0.0.1",
    "typer>=0.9.0",
    "keyring>=24.0.0",
    "tabulate>=0.9.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mcp_oracle_scm"
"Bug Tracker" = "https://github.com/yourusername/mcp_oracle_scm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp_oracle_scm = "mcp_oracle_scm.server:main"
